016 pushed module examples