@@ -21,6 +21,13 @@
             <artifactId>chapter00</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <!-- This is referenced in Appendix A. -->
+        <dependency>
+            <groupId>com.apress.bgn</groupId>
+            <artifactId>chapter01</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -38,6 +45,15 @@
                             </mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
